--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 image: Visual Studio 2017
 test: off
+init:
+  - git submodule update --init
 install:
   - pip install six
+  - pip install httplib2
 build_script:
   - python tools/run_tests/run_tests.py -l csharp --build_only
