--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ image: Visual Studio 2017
 test: off
 install:
   - git submodule update --init
-  - pip install six
-  - pip install httplib2
+  # - pip install six
+  # - pip install httplib2
+  - pip install
 build_script:
   - python tools/run_tests/run_tests.py -l csharp --build_only
