--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,7 @@ install:
   - pip install six
   - pip install httplib2
   - pip install google-api-python-client
+  - choco install yasm
+  - choco install ninja
 build_script:
   - python tools/run_tests/run_tests.py -l csharp --build_only
