--- a/.gitignore
+++ b/.gitignore
@@ -104,8 +104,10 @@ Pods/
 # Git generated files for conflicting
 *.orig
 
-# IDE specific folder for JetBrains IDEs
+# IDE specific folders
 .idea/
+.vs/
+.vscode/
 
 # Blaze files
 bazel-bin
